created findTags function

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <p>List of chrome tags on this page</p>
+    <button id="find-el"> find tags </button>
     <ul id="ul-el"></ul>
     <script src="chrome_tag.js"></script>
   </body>
