--- a/extension/index.html
+++ b/extension/index.html
@@ -7,6 +7,7 @@
     <p>List of chrome tags on this page</p>
     <button id="find-el"> find tags </button>
     <ul id="ul-el"></ul>
-    <script src="chrome_tag.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
+
