--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./popup.css" />
   </head>
   <body>
-    <h1>Header</h1>
+    <h1>Find Tags</h1>
     <button id="button-el">run script</button>
     <ul id="tag-list">Start of list</ul>
     <ul id="unmatched-list"></ul>
