fixed storage issues

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,9 @@
   <body>
     <h1>Find Tags</h1>
     <button id="button-el">run script</button>
-    <ul id="unmatched-list"></ul>
-
+    <div id="render-list">
+      <ul id="unmatched-list"></ul>
+    </div>
     <script src="./popup.js" type="module"></script>
   </body>
 </html>
