--- a/popup.html
+++ b/popup.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="./popup.css" />
   </head>
   <body>
-    <h1>Find Tags</h1>
+    <h1>Google Tag Finder</h1>
     <button id="button-el">run script</button>
+    <p id="script-error"></p>
     <div id="gtag-list">
-      <ul id="unmatched-list"></ul>
+      <!-- placholder for gtag list -->
+    </div>
+    <div id="unmatched-list">
+      <!-- placholder for gtag list -->
     </div>
     <script src="./popup.js" type="module"></script>
   </body>
