updated storage functions

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
       <!-- placholder for gtag list -->
     </div>
     <div id="unmatched-list">
-      <!-- placholder for gtag list -->
+      <!-- placholder for unmatched list -->
     </div>
     <script src="./popup.js" type="module"></script>
   </body>
