added clear data button

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1>Google Tag Finder</h1>
-    <button id="button-el">Find tags</button>
+    <button id="find-tags">Find tags</button>
+    <button id="clear-data">Clear data</button>
     <p id="script-error"></p>
     <div id="gtag-list">
       <!-- placholder for gtag list -->
