added export data button

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
     <h1>Google Tag Finder</h1>
     <button id="find-tags">Find tags</button>
     <button id="clear-data">Clear data</button>
+    <button id="export-data">Export data</button>
     <p id="script-error"></p>
     <div id="gtag-list">
       <!-- placholder for gtag list -->
