--- a/popup.html
+++ b/popup.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <h1>Google Tag Finder</h1>
-    <button id="find-tags">Find tags</button>
-    <button id="clear-data">Clear data</button>
-    <button id="export-data">Export data</button>
+    <div class="btn-div">
+      <button id="find-tags">Find tags</button>
+      <button id="clear-data">Clear data</button>
+      <button id="export-data">Export data</button>
+    </div>
     <p id="script-error"></p>
     <div id="gtag-list">
       <!-- placholder for gtag list -->
